force-app/main/default/objects/inspire1__Project_Import_Job__c/inspire1__Project_Import_Job__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - BETA - project import jobs.</description>
    <label>Project Import Job</label>
    <nameField>
        <displayFormat>PIJ-{000000}</displayFormat>
        <label>Project Import Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Import Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>