force-app/main/default/objects/inspire1__Project_Import_Job__c/fields/inspire1__End__c.field-meta.xml
<CustomField>
    <fullName>inspire1__End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>