force-app/main/default/objects/inspire1__Project_Import_Job__c/fields/inspire1__Imported_Projects__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Imported_Projects__c</fullName>
    <label>Imported Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>