force-app/main/default/objects/inspire1__Project_Import_Job__c/fields/inspire1__Logs__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Logs__c</fullName>
    <label>Logs</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>