force-app/main/default/objects/inspire1__Project_Import_Job__c/fields/inspire1__Processed_Rows__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Processed_Rows__c</fullName>
    <label>Processed Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>