force-app/main/default/objects/inspire1__Project_Import_Job__c/fields/inspire1__Start__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>