force-app/main/default/objects/inspire1__Project_Import_Job__c/fields/inspire1__Start_Time_for_Tasks__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Time_for_Tasks__c</fullName>
    <defaultValue>TIMEVALUE(&apos;09:00:00.000&apos;)</defaultValue>
    <label>Start Time for Tasks</label>
    <type>Time</type>
</CustomField>